# IMBH

./: .gitignore  GPT_REPO_HANDOFF.md  README.md  pyproject.toml
Literature/: 1988ApJ...332..646A
Note/: CODEX_42BBBB8_SLOPE_GRID_VALIDATION_NEXT_STEPS.md  CODEX_5EEBBEE_STANDARD_SLIM_BENCHMARK_FIX_PLAN.md  CODEX_7A04A41_STANDARD_SLIM_MDOT_CONTINUATION_PLAN.md  CODEX_ADAPTIVE_SOURCE_FRONT_0808_RESULTS.md  CODEX_AFTER_STANDARD_SLIM_STREAM_ANNULUS_NEXT_PLAN.md  CODEX_ARCLENGTH_GLOBAL_JACOBIAN_ABOVE_EDDINGTON.md  CODEX_COMPACT_SOURCE_SHAPE_RESULTS.md  CODEX_COST_AWARE_AND_ROBIN_RESULTS.md  CODEX_E8D9CFA_FIXED_MDOT_RESIDUAL_FLOOR_NEXT_STEPS.md  CODEX_FIXED_MDOT_OUTER_BC_AND_DEFECT_NEXT_STEPS.md  CODEX_FLOWMAP_FAILURE_BACKWARD_SHOOTING_MICROGRID_PLAN.md  CODEX_GLOBAL_SLIM_NEXT_STEPS.md  CODEX_HIGH_MDOT_NOWIND_SPRINT_A_RESULTS.md  CODEX_HIGH_MDOT_STREAM_BRIDGE_EVALUATION_AND_PLAN.md  CODEX_HIGH_MDOT_STREAM_BRIDGE_RESULTS.md  CODEX_IMRI_QPE_PROJECT_BRIEF.md  CODEX_LATEST_FLOWMAP_TAIL_MATCHING_NEXT_STEPS.md  CODEX_LATEST_GRID_OUTER_EXTENSION_NEXT_STEPS.md  CODEX_OFFSET_SONIC_FLOWMAP_NEXT_STRATEGY.md  CODEX_POINT2_TO5_STREAM_AND_HIGH_MDOT_RUN_RESULTS.md  CODEX_POST_DESINGULARIZED_FOLD_NEXT_STEPS.md  CODEX_POST_FOLD_GLOBAL_FAMILY_AND_RANK_DEFECT_PLAN.md  CODEX_REPAIR_ISOLATED_SLIM_SOLVER.md  CODEX_SECOND_CRITICAL_DESINGULARIZED_DAE_PLAN.md  CODEX_SLIM_WIND_UPGRADE.md  CODEX_SLOPE_LAW_GRID_VALIDATION_NEXT_STEPS.md  CODEX_SONIC_TAYLOR_REGULARITY_PATCH_PLAN.md  CODEX_STANDARD_NO_WIND_SLIM_DISK_BENCHMARK_PLAN.md  CODEX_STANDARD_SLIM_MDOT_EQUILIBRATED_CONTINUATION_RESULTS.md  (+23 more)
(+2071 files in other folders)
