[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "imri-qpe-model"
version = "0.1.0"
description = "Semi-analytic IMRI minidisk limit-cycle model for QPEs."
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]
